<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        app:layout_constraintBottom_toTopOf="@+id/edPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="8dp"/>

    <TextView
        android:id="@+id/tvEstatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estatura"
        app:layout_constraintBottom_toTopOf="@+id/edEstatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPeso"
        android:paddingStart="8dp"/>

    <EditText
        android:id="@+id/edPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edPeso"
        app:layout_constraintBottom_toTopOf="@+id/tvEstatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPeso"
        android:inputType="number"
        android:paddingStart="8dp"/>

    <EditText
        android:id="@+id/edEstatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edEstatura"
        app:layout_constraintBottom_toTopOf="@+id/btnIMC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPeso"
        app:layout_constraintVertical_bias="0.348"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"/>

    <Button
        android:id="@+id/btnIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="su IMC aqui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIMC" />

    <Button
        android:id="@+id/btnhistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnHistorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIMC" />
    <Button
        android:id="@+id/btnRol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnhistorial" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/correo_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="user: " />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


